force-app/main/default/objects/Booking__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <label>Destination</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>