force-app/main/default/objects/Booking__c/fields/Number_of_Travelers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Travelers__c</fullName>
    <label>Number of Travelers</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>