force-app/main/default/objects/Booking__c/fields/Travel_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Travel_End_Date__c</fullName>
    <label>Travel End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>