force-app/main/default/objects/Booking__c/validationRules/Contact_Belongs_To_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Belongs_To_Account</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Primary_Contact__c)), Primary_Contact__r.AccountId &lt;&gt; Account__c)</errorConditionFormula>
    <errorDisplayField>Primary_Contact__c</errorDisplayField>
    <errorMessage>Selected Primary Contact does not belong to this Account.</errorMessage>
</ValidationRule>