force-app/main/default/objects/Booking__c/validationRules/Travelers_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Travelers_Must_Be_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Number_of_Travelers__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Number_of_Travelers__c</errorDisplayField>
    <errorMessage>Number of Travelers must be at least 1.</errorMessage>
</ValidationRule>