force-app/main/default/objects/Booking__c/listViews/Awaiting_Approval.listView-meta.xml
<ListView>
    <fullName>Awaiting_Approval</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Booking_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Awaiting Approval</label>
</ListView>