force-app/main/default/objects/Booking__c/listViews/Confirmed_Bookings.listView-meta.xml
<ListView>
    <fullName>Confirmed_Bookings</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Booking_Status__c</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </filters>
    <label>Confirmed Bookings</label>
</ListView>