force-app/main/default/objects/Booking__c/listViews/Pending_Payments.listView-meta.xml
<ListView>
    <fullName>Pending_Payments</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Balance_Due__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Booking_Status__c</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </filters>
    <label>Pending Payments</label>
</ListView>